--- a/www/assets/index.css
+++ b/www/assets/index.css
@@ -143,7 +143,8 @@ html{
 	text-align: center;
     height: 78%;
 }
-.pictureDetails .body .zoom{
+.pictureDetails .body .zoom p{
+    margin-top: 10px;
 }
 .pictureDetails .body #edit{
     margin-top: 20px;
