--- a/app/www2/assets/index.css
+++ b/app/www2/assets/index.css
@@ -91,6 +91,16 @@
 .fileBrowser .display-thumbs li:hover .actions:hover{
     opacity: 1;
 }
+.fileBrowser .display-thumbs .file .ion-ios7-cloud-outline{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    font-size: 5em;
+    line-height: 100px;
+}
 .fileBrowser .display-thumbs .directory{
     padding-left: 10px;
     padding-right: 10px;
@@ -112,6 +122,7 @@
 .fileBrowser .display-thumbs.size-1 .file,
 .fileBrowser .display-thumbs.size-1 .directory{
     height: 100px;
+    min-width: 100px;
 }
 .fileBrowser .display-thumbs.size-1 .directory{
     width: 100px;
@@ -119,6 +130,7 @@
 .fileBrowser .display-thumbs.size-2 .file,
 .fileBrowser .display-thumbs.size-2 .directory{
     height: 180px;
+    min-width: 180px;
 }
 .fileBrowser .display-thumbs.size-2 .directory{
     width: 180px;
@@ -126,6 +138,7 @@
 .fileBrowser .display-thumbs.size-3 .file,
 .fileBrowser .display-thumbs.size-3 .directory{
     height: 280px;
+    min-width: 280px;
 }
 .fileBrowser .display-thumbs.size-3 .directory{
     width: 280px;
