--- a/app/www2/assets/index.css
+++ b/app/www2/assets/index.css
@@ -24,19 +24,23 @@
 }
 
 .fileBrowser .loader{
-    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: fixed;
+    left: 0;
+    opacity: 0;
+    z-index: -1;
+    transition-property: opacity;
+    transition-duration: 0.5s;
 }
 .fileBrowser .bg-primary{
     opacity: 0;
 }
 
 .fileBrowser.loading .loader{
-    display: block;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    position: fixed;
-    left: 0;
+    z-index: 500;
+    opacity: 1;
 }
 
 .fileBrowser.loading .bg-primary{
