--- a/app/www2/assets/index.css
+++ b/app/www2/assets/index.css
@@ -122,7 +122,7 @@
 }
 .fileBrowser .display-thumbs .directory i{
     vertical-align: middle;
-    opacity: 0.1;
+    opacity: 0.05;
     position: absolute;
     top: 0;
     left: 0;
@@ -133,7 +133,7 @@
     text-decoration: none;
 }
 .fileBrowser .display-thumbs .directory:hover i{
-    opacity: 0.2;
+    opacity: 0.1;
 }
 
 
@@ -164,7 +164,7 @@
     width: 280px;
 }
 .fileBrowser .display-thumbs.size-1 .directory a{
-    font-size: 25px;
+    font-size: 18px;
 }
 .fileBrowser .display-thumbs.size-2 .directory a{
     font-size: 30px;
@@ -183,13 +183,10 @@
     line-height: 90%;
 }
 .fileBrowser .display-thumbs.size-1 .directory a span{
-    font-size: 0.7em;
 }
 .fileBrowser .display-thumbs.size-2 .directory a span{
-    font-size: 1.6em;
 }
 .fileBrowser .display-thumbs.size-3 .directory a span{
-    font-size: 2.3em;
 }
 .fileBrowser .display-thumbs.size-1 .actions a{
     font-size: 0.8em;
@@ -219,6 +216,15 @@
 .fileBrowser .display-thumbs >ul >li{
     display: inline-table;
     cursor: pointer;
+}
+.fileBrowser .display-thumbs.size-1 >ul >li >div{
+    height: 86px;
+}
+.fileBrowser .display-thumbs.size-2 >ul >li >div{
+    height: 166px;
+}
+.fileBrowser .display-thumbs.size-3 >ul >li >div{
+    height: 266px;
 }
 
 
