--- a/app/www2/assets/index.css
+++ b/app/www2/assets/index.css
@@ -18,7 +18,6 @@
 
 .fileBrowser{
     padding: 60px;
-    padding-bottom: 0px;
     float: left;
     width: 100%;
 }
@@ -228,11 +227,9 @@
 }
 
 .fileBrowser .displaySelector{
-    margin-left: 15px;
 }
 
 .fileBrowser .sizeSelector{
-    margin-left: 30px;
 }
 
 .fileBrowser .sizeSelector.disabled{
@@ -249,6 +246,20 @@
 
 .fileBrowser .sizeSelector .size-2{
     font-size: 16px;
+}
+
+.fileBrowser .pagination{
+    margin: 0px;
+    margin-right: 15px;
+}
+
+.fileBrowser .sec-nav{
+}
+
+.fileBrowser .bg-info{
+    padding: 5;
+    padding-left: 30;
+    padding-right: 30;
 }
 
 
