--- a/app/www/assets/index.css
+++ b/app/www/assets/index.css
@@ -345,6 +345,10 @@
 
 
 
+.display-table td,
+.display-table th{
+    vertical-align: middle !important;
+}
 .display-table .ion-ios7-folder-outline{
     font-size: 2.7em;
     padding-top: 0;
@@ -380,15 +384,13 @@
 }
 .name-col{
     width: 100%;
-    vertical-align: middle !important;
-    font-size: 1.2em;
     cursor: pointer;
 }
 th.type-col,
 th.name-col{
     text-transform: uppercase;
     font-weight: bold;
-    vertical-align: middle !important;
+    font-size: 1.2em;
 }
 .display-table .ion-ios7-photos-outline,
 .display-table .ion-ios7-folder-outline{
