--- a/app/www/assets/fileDetail.css
+++ b/app/www/assets/fileDetail.css
@@ -41,6 +41,8 @@
 }
 .fileDetail .tabs{
     padding: 25px;
+    overflow: auto;
+    height: 100%;
 }
 .fileDetail .tabs > div{
     opacity: 0;
@@ -59,8 +61,6 @@
 }
 
 .fileDetail .zoom img{
-    height: 80%;
-    max-height: 80%;
     max-width: 80%;
     box-shadow: 0 0px 6px grey;
 }
